Minor tweak for toolbar spacing. Fixed print layout so that print actually works. Problem here is that import with Share @link directive (freemarker macro) adds media="screen" so that style sheet only is valid for screen. The pdfviewer.css includes a @media print directive to hide toolbar buttons and sidebar for better print layout. Updated the import of css not to use @link.

--- a/Sandbox/Viewer Extension/source/web/extras/components/preview/pdfjs/pdfviewer.css
+++ b/Sandbox/Viewer Extension/source/web/extras/components/preview/pdfjs/pdfviewer.css
@@ -19,7 +19,7 @@ body {
   background: -moz-linear-gradient(center bottom, #eee 0%, #fff 100%);
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0.0, #ddd), color-stop(1.0, #fff));
   border-bottom: 1px solid #666;
-  padding: 3px;
+  padding: 3px 3px 3px 0px;
   position: fixed;
   left: 0px;
   top: 0px;
